fixed spacings

--- a/src/index.scss
+++ b/src/index.scss
@@ -66,7 +66,7 @@ body {
           flex-direction: row;
             justify-content: space-between;
           align-items: center;
-          width: 80%;
+          width: 100%;
 
           button {
             background-color: transparent;
@@ -129,8 +129,9 @@ body {
               .state {
                 display: flex;
                 flex-direction: row;
-                justify-content: space-between;
+                justify-content: space-evenly;
                 align-items: center;
+                width: 100%;
 
                 .partie {
                   height: 30vw;
@@ -175,19 +176,23 @@ body {
                   color: black;
                   background-color: transparent;
                   padding: 1em;
+                  grid-column: 1/5;
 
                   &:nth-child(odd) {
-                    grid-column: 1/5;
 
                     @media screen and (min-width: 500px) {
                       grid-column: 1/3;
                     }
                     &:last-child {
-                      grid-column: 2/4;
+                      @media screen and (min-width: 500px) {
+                        grid-column: 2/4;
+                      }
                     }
                   }
                     &:nth-child(even) {
+                      @media screen and (min-width: 500px) {
                         grid-column: 3/5;
+                      }
                     }
 
                   &.active {
